[package]
name = "rust-ddd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
#rocket_cors = { version = "0.6.0-alpha1", default-features = false }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
uuid = { version = "1", features = ["v4", "serde"] }
scrypt = { version = "0.10.0", default-features = true }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "uuid", "chrono"] }
validator = "0.16.0"
validator_derive = "0.16.0"
slug = "0.1.4"
rand = "0.8.4"
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
r2d2 = "0.8"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
env_logger = "0.9.3"
thiserror = "1"
[dev-dependencies]
once_cell = "1.9.0"
async-once-cell = "0.4.2"
[features]
default = ["random-suffix"]

# Enable generation of random suffix when making article slug. This
# allows having multiple articles with the same title.
random-suffix = []

[profile.dev.package."*"]
# Build dependencies with full release optimizations in debug builds.
# (Since they won't change often and probably do most of the heavy lifting)
opt-level = 3

[profile.dev]
# Build the project itself with just enough optimization to smooth out the
# most egregious of the abstractions which are only zero-cost when optimized
opt-level = 1
# Disable debug info in the binary to speed up builds
# Source: https://lemmy.ml/post/50089
debug = 0
